# TDT

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
demos/: interactive.tape  tolerance.tape  traceability.tape
docs/: CNAME  assembly.md  capa.md  collaboration.html  component.md  config.md  control.md  deviation.md  feature.md  index.html  integrations.html  lot.md  mate.md  ncr.md  process.md  quote.md  relationships.md  reports.html  requirements.md  result.md  risk.md  search.md  stackup.md  supplier.md  test.md  tolerance.html  tutorial.html  tutorial.md  why-plain-text.html  work_instruction.md  workflow.md
schemas/: asm.schema.json  cmp.schema.json  feat.schema.json  lot.schema.json  mate.schema.json  req.schema.json  risk.schema.json  tol.schema.json
scripts/: benchmark.py  generate_baseline.py
src/: lib.rs  main.rs
src/cli/: args.rs  helpers.rs  mod.rs  table.rs
src/cli/commands/: asm.rs  baseline.rs  blame.rs  bulk.rs  cache.rs  capa.rs  cmp.rs  config.rs  ctrl.rs  dev.rs  diff.rs  dmm.rs  dsm.rs  feat.rs  history.rs  import.rs  init.rs  link.rs  lot.rs  mate.rs  mod.rs  ncr.rs  proc.rs  quote.rs  report.rs  req.rs  risk.rs  rslt.rs  schema.rs  search.rs  status.rs  sup.rs  test.rs  tol.rs  trace.rs  utils.rs  validate.rs  where_used.rs  work.rs
src/cli/commands/import/: asm.rs  capa.rs  (+13 more)
src/core/: cache.rs  config.rs  entity.rs  git.rs  identity.rs  links.rs  loader.rs  mod.rs  project.rs  provider.rs  shortid.rs  team.rs  workflow.rs
src/core/cache/: mod.rs  queries.rs  schema.rs  sync.rs  types.rs
src/entities/: assembly.rs  capa.rs  component.rs  control.rs  feature.rs  lot.rs  mate.rs  mod.rs  ncr.rs  process.rs  requirement.rs  result.rs  risk.rs  stackup.rs  work_instruction.rs
src/schema/: template.rs  validator.rs  wizard.rs
src/yaml/: diagnostics.rs
test_project/.tdt/: config.yaml  shortids.json
test_project/bom/assemblies/: ASM-01KC6Q2E3DBE39PNB7NQT1P07R.tdt.yaml  ASM-01KC6Q2JSE93R959X3X5C3WYBV.tdt.yaml  ASM-01KC6Q3GPN1D6S2YP3J6TNGZAN.tdt.yaml
test_project/bom/components/: CMP-01KC5WMQD3GQ2T9PC967SVE5XE.tdt.yaml  CMP-01KC5WMT9QPAMR0KTBXSZASKDK.tdt.yaml  CMP-01KC5WMX333MHGCGT1J3GMWJA0.tdt.yaml  CMP-01KC5WMZE9TXGZ0326AGHVZ67Q.tdt.yaml  CMP-01KC5WN1ZTEZ4YRYDQ1FWC3A2Q.tdt.yaml  CMP-01KC5WN4JB2MGA95P0F5W09FJF.tdt.yaml  CMP-01KC5WN6RYWXG8K40V6QD1NS53.tdt.yaml  CMP-01KC5WN88ACC15C80G224WCM56.tdt.yaml  CMP-01KC5WN9PZC9CYGZCTAGVY5GES.tdt.yaml  CMP-01KC5WNBBTYNS0J6R0ZC0Y179S.tdt.yaml
test_project/bom/quotes/: QUOT-01KC5WPWQ0WGTGGS8JQ3MZMFHK.tdt.yaml  QUOT-01KC5WPZDJ66QNG79G6GGCRR4Z.tdt.yaml  QUOT-01KC5WQ14EGFH7JKWTZHKF3NTX.tdt.yaml  QUOT-01KC5WQ2QS64DG0P883KY31Y04.tdt.yaml  QUOT-01KC5WQ4B683E7G75F4BYWTSEB.tdt.yaml  QUOT-01KC5WQ5Y7SB2YXN5Q8BP3GSGB.tdt.yaml  QUOT-01KC5WQ7H944WM5RS658V2QKR5.tdt.yaml  QUOT-01KC5WQ9BNJ9TRQ0416XXZ68KT.tdt.yaml  QUOT-01KC5WQB0BA6XCPVW4NSR0CGTK.tdt.yaml  QUOT-01KC5WQCM70MW77QN4SKK69XX5.tdt.yaml
test_project/bom/suppliers/: SUP-01KC5WNPY5BK60P55032YYFJE2.tdt.yaml  SUP-01KC5WNRGEH0X4KB8FRYA0V53E.tdt.yaml  SUP-01KC5WNTFA9GY4HJFJ5APT94CJ.tdt.yaml  SUP-01KC5WNX5CWEBMZ2ZSWHVKYQAG.tdt.yaml  SUP-01KC5WNZJV3Y92GQ2Z7R533VB2.tdt.yaml
tests/: integration_tests.rs
tests/fixtures/: valid_risk.yaml
(+78 files in other folders)
