[package]
name = "tdt"
version = "0.1.0"
edition = "2021"
description = "Tessera Engineering Toolkit"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
dialoguer = "0.11"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"

# Schema & Templates
jsonschema = "0.29"
tera = "1"

# Identity & Time
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# File System
walkdir = "2"
directories = "5"

# Utilities
once_cell = "1"
rust-embed = "8"
rand = "0.9"

# Cache
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
csv = "1.4.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
